font and button color fix/override

--- a/students.html
+++ b/students.html
@@ -73,7 +73,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle c-link">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Бизнес ИТ</div>
@@ -83,7 +83,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle c-link">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">СТ и дизайн</div>
@@ -93,7 +93,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle c-link">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Софтуерно инженерство</div>
@@ -103,7 +103,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle c-link">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Математика</div>
@@ -113,7 +113,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle c-link">Архив</a></div>
                         </div>
                         <div class="row m-2">
                             <div class="col d-flex justify-content-start">Приложна математика</div>
@@ -123,7 +123,7 @@
                                 <button type="button" class="btn btn-outline-primary">3. курс</button>
                                 <button type="button" class="btn btn-outline-primary">4. курс</button>
                             </div>
-                            <div class="col text-center"><a href="#" class="align-middle">Архив</a></div>
+                            <div class="col text-center"><a href="#" class="align-middle c-link">Архив</a></div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
                                 <div class="col text-center">
-                                    <a href="#" class="align-middle">Архив</a>
+                                    <a href="#" class="align-middle c-link">Архив</a>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
                                 <div class="col text-center">
-                                    <a href="#" class="align-middle">Архив</a>
+                                    <a href="#" class="align-middle c-link">Архив</a>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                     <button type="button" class="btn btn-outline-primary">2-годишен</button>
                                 </div>
                                 <div class="col text-center">
-                                    <a href="#" class="align-middle">Архив</a>
+                                    <a href="#" class="align-middle c-link">Архив</a>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Докторантури</h5>
                                         </a>
                                     </div>
@@ -203,7 +203,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Курсове</h5>
                                         </a>
                                     </div>
@@ -216,7 +216,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Избираеми дисциплини
                                             </h5>
                                         </a>
@@ -230,7 +230,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Платформи за онлайн
                                                 обучение
                                             </h5>
@@ -246,7 +246,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Научна работа</h5>
                                         </a>
                                     </div>
@@ -259,7 +259,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Състезания</h5>
                                         </a>
                                     </div>
@@ -272,7 +272,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Дискусии
                                             </h5>
                                         </a>
@@ -286,7 +286,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Студентски съвет
                                             </h5>
                                         </a>
@@ -301,7 +301,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Правила</h5>
                                         </a>
                                     </div>
@@ -314,7 +314,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Стипендии</h5>
                                         </a>
                                     </div>
@@ -327,7 +327,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Проверка на оценки
                                             </h5>
                                         </a>
@@ -341,7 +341,7 @@
                         <div class="card rounded-2 h-100">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col"><a href="#" class="card-link">
+                                    <div class="col"><a href="#" class="card-link c-link">
                                             <h5 class="card-title font-weight-bold p-0 text-center">Стажове
                                             </h5>
                                         </a>
