--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg">
     <header>
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-md navbar-dark mb-4">
@@ -118,7 +118,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Обучение</h5>
                                 </a>
                             </div>
@@ -131,7 +131,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Научна дейност</h5>
                                 </a>
                             </div>
@@ -144,7 +144,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Състав
                                     </h5>
                                 </a>
@@ -158,7 +158,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Проекти
                                     </h5>
                                 </a>
@@ -173,7 +173,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Документи</h5>
                                 </a>
                             </div>
@@ -186,7 +186,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Възпитаници</h5>
                                 </a>
                             </div>
@@ -199,7 +199,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Материална база
                                     </h5>
                                 </a>
@@ -213,7 +213,7 @@
                 <div class="card rounded-2 h-100">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><a href="#" class="card-link">
+                            <div class="col"><a href="#" class="card-link c-link">
                                     <h5 class="card-title font-weight-bold p-0 text-center">Връзки
                                     </h5>
                                 </a>
