--- a/admission.html
+++ b/admission.html
@@ -88,7 +88,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
             </div>
             <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
             прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
@@ -100,7 +100,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
             </div>
             <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
                 ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
@@ -112,7 +112,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
             </div>
             <p class="card-text">Специалността си поставя за цел да акцентира не само върху езиците и технологиите за програмиране, 
                 но и да покаже пътища за анализиране и решаване на разнообразни проблеми във областта софтуерното производство, 
@@ -124,7 +124,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
             </div>
             <p class="card-text">Специалността отговаря на тенденциите на развитие и нуждите на софтуерния бизнес и подпомага по-бързата 
                 адаптация и реализация на завършващите специалисти на пазара на труда.Програмата осигурява задълбочена подготовка по 
@@ -136,7 +136,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Математика</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Математика</h5></a></div>
             </div>
             <p class="card-text">Специалността осигурява базова ши­­роко­про­­филна подготовка по математика чрез задължителните фундаментални 
                 дисциплини, вклю­чени в учеб­­ния план, а с избираемите и факултативните дисциплини студентите се подготвят по-задъл­бо­чено в 
@@ -162,7 +162,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Приложна математика - (2г.)</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Приложна математика - (2г.)</h5></a></div>
             </div>
             <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
             прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
@@ -174,7 +174,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Обучение по математика в училище - (2г.)</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Обучение по математика в училище - (2г.)</h5></a></div>
             </div>
             <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
                 ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
@@ -186,7 +186,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информатика с английски език - (2г.)</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Бизнес информатика с английски език - (2г.)</h5></a></div>
             </div>
             <p class="card-text">Специалността си поставя за цел да акцентира не само върху езиците и технологиите за програмиране, 
                 но и да покаже пътища за анализиране и решаване на разнообразни проблеми във областта софтуерното производство, 
@@ -198,7 +198,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии със специализация графични среди и потребителски интерфейси - (2г.)</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии със специализация графични среди и потребителски интерфейси - (2г.)</h5></a></div>
             </div>
             <p class="card-text">Специалността отговаря на тенденциите на развитие и нуждите на софтуерния бизнес и подпомага по-бързата 
                 адаптация и реализация на завършващите специалисти на пазара на труда. Програмата...</p>
@@ -209,7 +209,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии със специализация системи с изкуствен интелект - (2г.)</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии със специализация системи с изкуствен интелект - (2г.)</h5></a></div>
             </div>
             <p class="card-text">Специалността осигурява базова ши­­роко­про­­филна подготовка по математика чрез задължителните фундаментални 
                 дисциплини, вклю­чени в учеб­­ния план, а с избираемите и факултативните дисциплини студентите се...</p>
@@ -233,7 +233,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Софтуерни технологии и дизайн</h5></a></div>
             </div>
             <p class="card-text">Специалността е предимно с приложна насоченост. Тя осигурява базова широкопрофилна подготовка за 
             прилагане на съвременни софтуерни технологии в различни области на човешката дейност чрез задължителните фундаментални 
@@ -245,7 +245,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Бизнес информационни технологии</h5></a></div>
             </div>
             <p class="card-text">Специалността акцентира върху ефективното използване и прилагане на информатиката и информационните т
                 ехнологии за подпомагане на бизнес операциите и вземането на решения в софтуерното производство, индустрията и 
@@ -257,7 +257,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Информатика</h5></a></div>
             </div>
             <p class="card-text">Специалността си поставя за цел да акцентира не само върху езиците и технологиите за програмиране, 
                 но и да покаже пътища за анализиране и решаване на разнообразни проблеми във областта софтуерното производство, 
@@ -269,7 +269,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Софтуерно инженерство</h5></a></div>
             </div>
             <p class="card-text">Специалността отговаря на тенденциите на развитие и нуждите на софтуерния бизнес и подпомага по-бързата 
                 адаптация и реализация на завършващите специалисти на пазара на труда.Програмата осигурява задълбочена подготовка по 
@@ -281,7 +281,7 @@
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
-                <div class="col"><a href="#" class="card-link"><h5 class="card-title font-weight-bold p-0">Математика</h5></a></div>
+                <div class="col"><a href="#" class="card-link c-link"><h5 class="card-title font-weight-bold p-0">Математика</h5></a></div>
             </div>
             <p class="card-text">Специалността осигурява базова ши­­роко­про­­филна подготовка по математика чрез задължителните фундаментални 
                 дисциплини, вклю­чени в учеб­­ния план, а с избираемите и факултативните дисциплини студентите се подготвят по-задъл­бо­чено в 
