--- a/admission.html
+++ b/admission.html
@@ -84,7 +84,7 @@
 </div>
 
 <div class="row justify-content-center">                
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mr-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -96,7 +96,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -108,7 +108,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -132,7 +132,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 ml-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -158,7 +158,7 @@
 </div>
 
 <div class="row justify-content-center">                
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mr-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -170,7 +170,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -182,7 +182,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -194,7 +194,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -205,7 +205,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 ml-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -229,7 +229,7 @@
     </div>
 </div>
 <div class="row justify-content-center">                
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mr-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -241,7 +241,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -253,7 +253,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -265,7 +265,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-4 mx-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
@@ -277,7 +277,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2 mb-4">
+    <div class="col-md-2 mb-5 ml-2">
         <div class="card rounded-0 card-admission">
             <div class="card-body">
             <div class="row">
